Refactoring: add comment

--- a/fdm/Views/Home/fdm1D.cshtml
+++ b/fdm/Views/Home/fdm1D.cshtml
@@ -160,6 +160,7 @@
         }
     })
 
+    //animacja poszczególnych danych z tablicy
     function animateChart() {
         var i = 0;
         var chart = window.chartCanvas_chart;     
