Feature: add home button and glyph icons to views

--- a/fdm/Content/app.css
+++ b/fdm/Content/app.css
@@ -1,6 +1,4 @@
-﻿
-
-.vertical-center {
+﻿.vertical-center {
     min-height: 100%;
     min-height: 100vh;
     display: flex;
@@ -14,17 +12,28 @@
 .output{
     overflow: overlay;
 }
+
 .row-title {
     padding: 100px 0 0
+}
+
+.home {
+    color: #5bc0de;
+}
+
+.home:hover {
+    color: #46b8da;
 }
 
 /*Bootstrap styles*/
 .row {
     padding: 30px 0; 
 }
+
 h4 {
     margin-bottom: 30px;
 }
+
 .btn-lg {
     min-width: 200px;
 }
@@ -32,6 +41,11 @@ h4 {
 .container-fluid {
     width: 100% !important;
 }
+
 label {
     padding-left: 0 !important;
+}
+
+.glyphicon {
+    margin-right: 0.7em;
 }
