--- a/fdm/Views/Home/Index.cshtml
+++ b/fdm/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-xs-12 text-center">
                 @Html.ActionLink("MRS 1D w czasie", "fdm1D", null, new { @class = "btn btn-info btn-lg" })
-                @Html.ActionLink("MRS 2D", "fdm2D", null, new { @class = "btn btn-info btn-lg" })
+                @Html.ActionLink("MRS 2D w przestrzeni", "fdm2D", null, new { @class = "btn btn-info btn-lg" })
             </div>
         </div>
     </div>
