--- a/fdm/Views/Home/fdm1D.cshtml
+++ b/fdm/Views/Home/fdm1D.cshtml
@@ -21,13 +21,13 @@
 <body>
     <div class="container container-fluid">
         <div class="row">
-            <div class="col-xs-12">
-                <h1>MRS 1D w czasie</h1>
+            <div class="col-xs-12">              
+                <h1><a href="@Url.Action("Index", "Home")" class="home"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>MRS 1D w czasie</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-md-3">
-                    <h4>Dane wejściowe</h4>
+            <div class="col-xs-12 col-md-3">                 
+                    <h4><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>Dane wejściowe</h4>
                     @using (Html.BeginForm("fdm1D", "Home", FormMethod.Post, new { @class="form", role = "form-horizontal"} ))
                     {
                         <div class="form-group">
@@ -76,7 +76,7 @@
                     }
             </div>
             <div class="col-xs-12 col-md-5 output">
-                <h4>Dane wyjściowe</h4>
+                <h4><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>Dane wyjściowe</h4>
                 @if (ViewBag.ViewedWithChart)
                 {
                     <div class="table-responsive">
@@ -95,16 +95,12 @@
                         </table>
                     </div>
                 }
-
-
-
-
-                    </div>
-            <div class="col-xs-12 col-md-4">
-                <h4>Wizualizacja</h4>
-                <canvas id="chartCanvas" width="420" height="230"></canvas>
-                <p id="canvasLegend"></p>
-            </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+            <h4><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>Wizualizacja</h4>
+            <canvas id="chartCanvas" width="420" height="230"></canvas>
+            <p id="canvasLegend"></p>
+        </div>
     </div>
 
 @if (ViewBag.ViewedWithChart)
