Refactoring: add comment with reference to Paper.js

--- a/fdm/Views/Home/Fdm2D.cshtml
+++ b/fdm/Views/Home/Fdm2D.cshtml
@@ -101,6 +101,7 @@
 
     <script type="text/javascript" src="~/Scripts/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="~/Scripts/app.js"></script>
+    @* Biblioteka wykorzystana do wizualizacji: http://paperjs.org/ *@
     <script type="text/javascript" src="~/Scripts/paper-full.min.js"></script>
     <script type="text/paperscript" canvas="chartCanvas">
     //przy zmianie ilości elementów wykres rysowany jest na nowo
